--- a/index.html
+++ b/index.html
@@ -18,196 +18,203 @@
   </head>
   <body>
     <div class="container">
-      <header class="nav-bar">
-        <span class="nav-header">Recursos</span>
-      </header>
-      <div class="inner-container">
-        <section class="item-section images">
-          <span class="item-section-title">Imagenes</span>
-          <div class="item-container">
-            <a
-              href="https://www.unsplash.com"
-              target="_blank"
-              class="item-container-link"
-            >
-              <item class="item-container-data">
-                <img class="item-icon" src="img/photos/unsplash.png" />
-                <span class="item-name">Unsplash</span>
-              </item>
-            </a>
-            <a
-              href="https://www.pexels.com"
-              target="_blank"
-              class="item-container-link"
-            >
-              <item class="item-container-data">
-                <img class="item-icon" src="img/photos/pexels.svg" />
-                <span class="item-name">Pexels</span>
-              </item>
-            </a>
-            <a
-              href="https://www.isorepublic.com"
-              target="_blank"
-              class="item-container-link"
-            >
-              <item class="item-container-data">
-                <img class="item-icon" src="img/photos/isorep.svg" />
-                <span class="item-name">ISO Republic</span>
-              </item>
-            </a>
-            <a
-              href="https://undraw.co/illustrations"
-              target="_blank"
-              class="item-container-link"
-            >
-              <item class="item-container-data">
-                <img class="item-icon" src="img/photos/noIcon.svg" />
-                <span class="item-name">unDraw</span>
-              </item>
-            </a>
-            <a
-              href="https://www.pixabay.com"
-              target="_blank"
-              class="item-container-link"
-            >
-              <item class="item-container-data">
-                <img class="item-icon" src="img/photos/pixabay.svg" />
-                <span class="item-name">Pixabay</span>
-              </item>
-            </a>
-            <a
-              href="https://www.uifaces.co"
-              target="_blank"
-              class="item-container-link"
-            >
-              <item class="item-container-data">
-                <img class="item-icon" src="img/photos/uifaces.svg" />
-                <span class="item-name">UI Faces</span>
-              </item>
-            </a>
-            <a
-              href="https://www.randomuser.me"
-              target="_blank"
-              class="item-container-link"
-            >
-              <item class="item-container-data">
-                <img class="item-icon" src="img/photos/noIcon.svg" />
-                <span class="item-name">Random User Generator</span>
-              </item>
-            </a>
-            <a
-              href="https://www.coverr.co"
-              target="_blank"
-              class="item-container-link"
-            >
-              <item class="item-container-data">
-                <img class="item-icon" src="img/photos/coverr.svg" />
-                <span class="item-name">Coverr</span>
-              </item>
-            </a>
-          </div>
-        </section>
-        <section class="item-section colors">
-          <span class="item-section-title">Colores</span>
-          <div class="item-container">
-            <a
-              href="https://yeun.github.io/open-color/"
-              target="_blank"
-              class="item-container-link"
-            >
-              <item class="item-container-data">
-                <img class="item-icon" src="img/colors/oc.svg" />
-                <span class="item-name">Open Colors</span>
-              </item>
-            </a>
-            <a
-              href="https://tailwindcss.com/docs/customizing-colors"
-              target="_blank"
-              class="item-container-link"
-            >
-              <item class="item-container-data">
-                <img class="item-icon" src="img/colors/tailwind.svg" />
-                <span class="item-name">Tailwind CSS</span>
-              </item>
-            </a>
-            <a
-              href="https://flatuicolors.com/"
-              target="_blank"
-              class="item-container-link"
-            >
-              <item class="item-container-data">
-                <img class="item-icon" src="img/colors/noIcon.svg" />
-                <span class="item-name">FlatUI Colors</span>
-              </item>
-            </a>
-            <a
-              href="https://coolors.co/"
-              target="_blank"
-              class="item-container-link"
-            >
-              <item class="item-container-data">
-                <img class="item-icon" src="img/colors/coolors.svg" />
-                <span class="item-name">Coolors</span>
-              </item>
-            </a>
-            <a
-              href="https://www.materialpalette.com/"
-              target="_blank"
-              class="item-container-link"
-            >
-              <item class="item-container-data">
-                <img class="item-icon" src="img/colors/noIcon.svg" />
-                <span class="item-name">Material Design</span>
-              </item>
-            </a>
-            <a
-              href="https://uigradients.com"
-              target="_blank"
-              class="item-container-link"
-            >
-              <item class="item-container-data">
-                <img class="item-icon" src="img/colors/uiGradients.svg" />
-                <span class="item-name">UI Gradients</span>
-              </item>
-            </a>
-          </div>
-        </section>
-        <section class="item-section fonts">
-          <span class="item-section-title">Colores</span>
-          <div class="item-container">
-            <a
-              href="https://fonts.google.com"
-              target="_blank"
-              class="item-container-link"
-            >
-              <item class="item-container-data">
-                <img class="item-icon" src="img/fonts/gfonts.svg" />
-                <span class="item-name">Open Colors</span>
-              </item>
-            </a>
-            <a
-              href="https://www.fontsquirrel.com/"
-              target="_blank"
-              class="item-container-link"
-            >
-              <item class="item-container-data">
-                <img class="item-icon" src="img/noIcon.svg" />
-                <span class="item-name">Font Squirrel</span>
-              </item>
-            </a>
-            <a
-              href="https://www.dafont.com/es/"
-              target="_blank"
-              class="item-container-link"
-            >
-              <item class="item-container-data">
-                <img class="item-icon" src="img/fonts/dafont.png" />
-                <span class="item-name">DaFonts</span>
-              </item>
-            </a>
-          </div>
-        </section>
+      <div>
+        <header class="nav-bar">
+          <span class="nav-header">Recursos</span>
+        </header>
+        <div class="inner-container">
+          <section class="item-section images">
+            <span class="item-section-title">Imagenes</span>
+            <div class="item-container">
+              <a
+                href="https://www.unsplash.com"
+                target="_blank"
+                class="item-container-link"
+              >
+                <item class="item-container-data">
+                  <img class="item-icon" src="img/photos/unsplash.png" />
+                  <span class="item-name">Unsplash</span>
+                </item>
+              </a>
+              <a
+                href="https://www.pexels.com"
+                target="_blank"
+                class="item-container-link"
+              >
+                <item class="item-container-data">
+                  <img class="item-icon" src="img/photos/pexels.svg" />
+                  <span class="item-name">Pexels</span>
+                </item>
+              </a>
+              <a
+                href="https://www.isorepublic.com"
+                target="_blank"
+                class="item-container-link"
+              >
+                <item class="item-container-data">
+                  <img class="item-icon" src="img/photos/isorep.svg" />
+                  <span class="item-name">ISO Republic</span>
+                </item>
+              </a>
+              <a
+                href="https://undraw.co/illustrations"
+                target="_blank"
+                class="item-container-link"
+              >
+                <item class="item-container-data">
+                  <img class="item-icon" src="img/photos/noIcon.svg" />
+                  <span class="item-name">unDraw</span>
+                </item>
+              </a>
+              <a
+                href="https://www.pixabay.com"
+                target="_blank"
+                class="item-container-link"
+              >
+                <item class="item-container-data">
+                  <img class="item-icon" src="img/photos/pixabay.svg" />
+                  <span class="item-name">Pixabay</span>
+                </item>
+              </a>
+              <a
+                href="https://www.uifaces.co"
+                target="_blank"
+                class="item-container-link"
+              >
+                <item class="item-container-data">
+                  <img class="item-icon" src="img/photos/uifaces.svg" />
+                  <span class="item-name">UI Faces</span>
+                </item>
+              </a>
+              <a
+                href="https://www.randomuser.me"
+                target="_blank"
+                class="item-container-link"
+              >
+                <item class="item-container-data">
+                  <img class="item-icon" src="img/photos/noIcon.svg" />
+                  <span class="item-name">Random User Generator</span>
+                </item>
+              </a>
+              <a
+                href="https://www.coverr.co"
+                target="_blank"
+                class="item-container-link"
+              >
+                <item class="item-container-data">
+                  <img class="item-icon" src="img/photos/coverr.svg" />
+                  <span class="item-name">Coverr</span>
+                </item>
+              </a>
+            </div>
+          </section>
+          <section class="item-section colors">
+            <span class="item-section-title">Colores</span>
+            <div class="item-container">
+              <a
+                href="https://yeun.github.io/open-color/"
+                target="_blank"
+                class="item-container-link"
+              >
+                <item class="item-container-data">
+                  <img class="item-icon" src="img/colors/oc.svg" />
+                  <span class="item-name">Open Colors</span>
+                </item>
+              </a>
+              <a
+                href="https://tailwindcss.com/docs/customizing-colors"
+                target="_blank"
+                class="item-container-link"
+              >
+                <item class="item-container-data">
+                  <img class="item-icon" src="img/colors/tailwind.svg" />
+                  <span class="item-name">Tailwind CSS</span>
+                </item>
+              </a>
+              <a
+                href="https://flatuicolors.com/"
+                target="_blank"
+                class="item-container-link"
+              >
+                <item class="item-container-data">
+                  <img class="item-icon" src="img/colors/noIcon.svg" />
+                  <span class="item-name">FlatUI Colors</span>
+                </item>
+              </a>
+              <a
+                href="https://coolors.co/"
+                target="_blank"
+                class="item-container-link"
+              >
+                <item class="item-container-data">
+                  <img class="item-icon" src="img/colors/coolors.svg" />
+                  <span class="item-name">Coolors</span>
+                </item>
+              </a>
+              <a
+                href="https://www.materialpalette.com/"
+                target="_blank"
+                class="item-container-link"
+              >
+                <item class="item-container-data">
+                  <img class="item-icon" src="img/colors/noIcon.svg" />
+                  <span class="item-name">Material Design</span>
+                </item>
+              </a>
+              <a
+                href="https://uigradients.com"
+                target="_blank"
+                class="item-container-link"
+              >
+                <item class="item-container-data">
+                  <img class="item-icon" src="img/colors/uiGradients.svg" />
+                  <span class="item-name">UI Gradients</span>
+                </item>
+              </a>
+            </div>
+          </section>
+          <section class="item-section fonts">
+            <span class="item-section-title">Colores</span>
+            <div class="item-container">
+              <a
+                href="https://fonts.google.com"
+                target="_blank"
+                class="item-container-link"
+              >
+                <item class="item-container-data">
+                  <img class="item-icon" src="img/fonts/gfonts.svg" />
+                  <span class="item-name">Open Colors</span>
+                </item>
+              </a>
+              <a
+                href="https://www.fontsquirrel.com/"
+                target="_blank"
+                class="item-container-link"
+              >
+                <item class="item-container-data">
+                  <img class="item-icon" src="img/noIcon.svg" />
+                  <span class="item-name">Font Squirrel</span>
+                </item>
+              </a>
+              <a
+                href="https://www.dafont.com/es/"
+                target="_blank"
+                class="item-container-link"
+              >
+                <item class="item-container-data">
+                  <img class="item-icon" src="img/fonts/dafont.png" />
+                  <span class="item-name">DaFonts</span>
+                </item>
+              </a>
+            </div>
+          </section>
+        </div>
       </div>
+      <footer>
+        <span class="footer">
+          Sebastian Silva - Universidad Manuela Beltran - Diseño web</span
+        >
+      </footer>
     </div>
   </body>
 </html>
