--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
               >
                 <item class="item-container-data">
                   <img class="item-icon" src="img/fonts/gfonts.svg" />
-                  <span class="item-name">Open Colors</span>
+                  <span class="item-name">Google Fonts</span>
                 </item>
               </a>
               <a
