Added uploaded video to a button

--- a/index.html
+++ b/index.html
@@ -34,17 +34,15 @@
           <ul class="nav-header-links">
             <li>
               <a href="#" class="nav-header-link link-actividad-1"
-                >Actividad I</a
+                >Actividades</a
               >
             </li>
             <li>
-              <a href="#" class="nav-header-link link-actividad-2"
-                >Actividad II</a
-              >
-            </li>
-            <li>
-              <a href="#" class="nav-header-link link-actividad-3"
-                >Actividad III</a
+              <a
+                href="https://www.screencast.com/t/dII86IFM0"
+                target="_blank"
+                class="nav-header-link link-actividad-3"
+                >Video JS</a
               >
             </li>
           </ul>
